crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__pair_bound_collection_outside_pairs.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `size(a.param.name) >= 1`: pair-bound collection projections are only valid inside `pairs(...)` filters",
  "input": "size(a.param.name) >= 1"
}
