crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__pair_domain_in_collection.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `size(pairs(method)) > 0`: `pairs(...)` domains are only supported by count/any/all/none, not collection projections",
  "input": "size(pairs(method)) > 0"
}
