crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__pair_domain_in_mode.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `mode(pairs(method), name) = name`: `pairs(...)` domains are only supported by count/any/all/none, not domain value expressions",
  "input": "mode(pairs(method), name) = name"
}
